# DIY_Quadcopter_Flight_Controller

./: .gitignore  CMakeLists.txt  controller.cpp  controller.h  imu.cpp  imu.h  led.cpp  led.h  main.cpp  motor.cpp  motor.h  moving_average.h  normalize_sensor.h  pid.cpp  pid.h  readme.md
IMU/: CMakeLists.txt  imu.cpp  imu.h  main.cpp  moving_average.h
Median/: MakeFile  main.cpp  median.h  sorted_array.h  stacked_queue.h
Sensor/: sensor.cpp
Tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello.cpp  hello.dis  hello.elf  hello.elf.map  hello.uf2
Tests/pico-sdk/: Makefile  cmake_install.cmake
Tests/pico-sdk/docs/: Makefile  cmake_install.cmake
Tests/pico-sdk/src/: Makefile  cmake_install.cmake
Tests/pico-sdk/src/common/boot_picobin_headers/: Makefile
Tests/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
Tests/pico-sdk/src/common/boot_uf2_headers/: Makefile
Tests/pico-sdk/src/common/hardware_claim/: Makefile
Tests/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
Tests/pico-sdk/src/common/pico_binary_info/: Makefile
Tests/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
Tests/pico-sdk/src/common/pico_divider_headers/: Makefile
Tests/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
Tests/pico-sdk/src/common/pico_sync/: Makefile
Tests/pico-sdk/src/common/pico_time/: Makefile
Tests/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
Tests/pico-sdk/tools/: Makefile
(+127 files in other folders)
